@@ -1,6 +1,8 @@
 2003 Oct 3   Stefan Urbanek <urbanek@host.sk>
 
-    * Added ReadlineTranscript module (Idea by Alexander Diemand)
+    * Added ReadlineTranscript module (Idea by Alexander Diemand + patch from 
+    David Ayers)
+    * Added shell.st example.
 
 2003 Sep 24  Stefan Urbanek <urbanek@host.sk>
     
